# flask-blog

./: .gitignore  pyproject.toml  run.py
app/: __init__.py  db_session.py  logger.py  models.py  utils.py
app/auth/: forms.py  routes.py
app/blog/: routes.py
app/static/css/: base.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/blog/: create_news.html  index.html  view_post.html
